--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ or,
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(./pica 1.jpg) no-repeat center center / cover;
+    background: url(./pica\ 1.jpg) no-repeat center center / cover;
     height: 100vh;
     text-align: center;
 }
